fix(page title)L Alignment

--- a/src/common-ui/page-title/page-title.component.scss
+++ b/src/common-ui/page-title/page-title.component.scss
@@ -9,6 +9,7 @@
     font-size: 20px;
     pointer-events: none;
     height: 28px;
+    line-height: 30px;
   }
 
   .icon-button {
